--- a/index.html
+++ b/index.html
@@ -6,19 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Component Library</title>
+
+    <!--Css way 1 :style tag 
+            <style>
+            body {
+                color: rgb(205, 33, 67);
+            }
+        </style> -->
+
+    <!-- third  way  to  implement the css:external  link -->
+    <link href="style.css" rel="stylesheet" />
+
+
 </head>
 
 <body>
-    <h1>Devashish vyas Component Library</h1>
-    <p>I am attending neog camp and i want to make a Library which would make all my project look good </p>
+    <h1 id="lib-header">Devashish's Component Library</h1>
+
+
+    <!--second  way to  implement style
+         <h1 style="color: red">Devashish's Component Library</h1> -->
+
+
+
+    <p class="para">I am attending neog camp and i want to make a Library which would make all my project look good </p>
     <hr>
 
 
     <h2> @Typeography</h2>
     <h1>This is the biggest heading</h1>
     <h2>This is the second biggest</h2>
-    <p>This is a noramal paragraph and we can write normal text here</p>
-    <small>This  text is small as compare to  the above paragraph</small>
+    <p class="para"> This is a noramal paragraph and we can write normal text here</p>
+    <small>This text is small as compare to the above paragraph</small>
     <hr>
 
 
@@ -28,14 +47,99 @@
     <div>This is a Fluid Container and it will go till the end of the page</div>
 
     <h3> Center Container</h3>
-    <div>This will go till the specified width </div>
+    <div class="para">This will go till the specified width </div>
     <hr>
 
 
-    <h3>@Links</h3>
-
+    <h2>@Links</h2>
     <a href="/">primary link </a>
     <a href="/">secondary link</a>
+    <hr>
+
+    <h2>Lists</h2>
+    <h3>UnorderList</h3>
+    <ul>
+        <li>Inline one</li>
+        <li>Inine two </li>
+        <li>Inline three</li>
+    </ul>
+    <h3>Unorder Inline list</h3>
+    <ul>
+        <li>Inline item one</li>
+        <li>Inline item two </li>
+        <li>Inline item three</li>
+    </ul>
+
+    <h3> reverse ordered List</h3>
+    <ol>
+        <li>milk</li>
+        <li>bread</li>
+        <li>toast</li>
+    </ol>
+    <hr>
+
+    <h2>@NAV</h2>
+    <nav>
+        <div> Brand Name</div>
+        <ul>
+            <li>
+                <a href="/">home</a>
+            </li>
+            <li>
+                <a href="/">Project</a>
+            </li>
+            <li>
+                <a href="/">About</a>
+            </li>
+        </ul>
+    </nav>
+    <hr>
+
+    <h2>Head</h2>
+
+    <header>
+        <img src="images/image.svg" />
+        <h1>Heading inside hero</h1>
+    </header>
+    <hr>
+
+    <h2>@Sections</h2>
+    <h3>White Section </h3>
+    <section>
+        <p>This will have white section </p>
+    </section>
+
+    <h3>off White Section </h3>
+
+    <section>
+        <p>This will have off white section </p>
+
+    </section>
+
+    <hr>
+
+    <h2>@Footer</h2>
+    <footer>
+        <div>Some small headding inside footer</div>
+        <ul>
+            <li>social one </li>
+            <li>social two </li>
+            <li>social three </li>
+        </ul>
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div style="height: 30vh;"></div> -->
+
 
 </body>
 
