update:style.css

--- a/index.html
+++ b/index.html
@@ -7,47 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Component Library</title>
 
-    <!--Css way 1 :style tag 
-            <style>
-            body {
-                color: rgb(205, 33, 67);
-            }
-        </style> -->
-
-    <!-- third  way  to  implement the css:external  link -->
     <link href="style.css" rel="stylesheet" />
 
 
 </head>
 
 <body>
-    <h1 id="lib-header">Devashish's Component Library</h1>
-
-
-    <!--second  way to  implement style
-         <h1 style="color: red">Devashish's Component Library</h1> -->
+    <h1>Devashish's Component Library</h1>
 
 
 
-    <p class="para">I am attending neog camp and i want to make a Library which would make all my project look good </p>
+
+
+
+    <p>I am attending neog camp and i want to make a Library which would make all my project look good </p>
     <hr>
 
 
     <h2> @Typeography</h2>
     <h1>This is the biggest heading</h1>
+
     <h2>This is the second biggest</h2>
-    <p class="para"> This is a noramal paragraph and we can write normal text here</p>
+
+    <p> This is a noramal paragraph and we can write normal text here</p>
+
     <small>This text is small as compare to the above paragraph</small>
+
+    <p>This paragraph have a <b>Bold</b> letter in it</p>
     <hr>
 
 
     <h2>@ Containers</h2>
 
     <h3>Fluid Container</h3>
-    <div>This is a Fluid Container and it will go till the end of the page</div>
+    <div class="container-fluid">This is a Fluid Container and it will go till the end of the page</div>
 
     <h3> Center Container</h3>
-    <div class="para">This will go till the specified width </div>
+    <div class="container container-center">This will go till the specified width </div>
     <hr>
 
 
