--- a/index.html
+++ b/index.html
@@ -48,26 +48,27 @@
 
 
     <h2>@Links</h2>
-    <a href="/">primary link </a>
-    <a href="/">secondary link</a>
+    <a class="link link-primary" href="/">primary link </a>
+    <a class="link link-secondary" href="/">secondary link</a>
     <hr>
 
     <h2>Lists</h2>
     <h3>UnorderList</h3>
-    <ul>
+    <p>This list will not have bullets </p>
+    <ul class="list-non-bullet">
         <li>Inline one</li>
         <li>Inine two </li>
         <li>Inline three</li>
     </ul>
     <h3>Unorder Inline list</h3>
-    <ul>
-        <li>Inline item one</li>
-        <li>Inline item two </li>
-        <li>Inline item three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">Inline item one</li>
+        <li class="list-item-inline">Inline item three</li>
+        <li class="list-item-inline">Inline item two </li>
     </ul>
 
     <h3> reverse ordered List</h3>
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>bread</li>
         <li>toast</li>
