--- a/index.html
+++ b/index.html
@@ -76,27 +76,28 @@
     <hr>
 
     <h2>@NAV</h2>
-    <nav>
-        <div> Brand Name</div>
-        <ul>
-            <li>
-                <a href="/">home</a>
+    <nav class="navigation container">
+
+        <div class="nav-brand"> Brand Name</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">home</a>
             </li>
-            <li>
-                <a href="/">Project</a>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">Project</a>
             </li>
-            <li>
-                <a href="/">About</a>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">About</a>
             </li>
         </ul>
     </nav>
     <hr>
 
-    <h2>Head</h2>
+    <h2>@header</h2>
 
-    <header>
-        <img src="images/image.svg" />
-        <h1>Heading inside hero</h1>
+    <header class="hero">
+        <img class="hero-img" src="images/image.svg" />
+        <h1 class="hero-heading">Heading inside <span class="heading-inverted">hero</span></h1>
     </header>
     <hr>
 
