--- a/index.html
+++ b/index.html
@@ -102,15 +102,21 @@
     <hr>
 
     <h2>@Sections</h2>
-    <h3>White Section </h3>
-    <section>
-        <p>This will have white section </p>
+    <section class="section">
+        <div class="container-center">
+
+            <h1>White Section </h1>
+            <p>This will have white section </p>
+        </div>
     </section>
 
-    <h3>off White Section </h3>
 
-    <section>
-        <p>This will have off white section </p>
+    <section class="section ow">
+        <div class="container-center">
+
+            <h1>off White Section </h1>
+            <p>This will have off white section </p>
+        </div>
 
     </section>
 
