--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
     <p>I am attending neog camp and i want to make a Library which would make all my project look good </p>
     <hr>
 
+    <h2>@NAV</h2>
+    <nav class="navigation container">
+
+        <div class="nav-brand"> Brand Name</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">Project</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">About</a>
+            </li>
+        </ul>
+    </nav>
+    <hr>
+
 
     <h2> @Typeography</h2>
     <h1>This is the biggest heading</h1>
@@ -75,24 +93,6 @@
     </ol>
     <hr>
 
-    <h2>@NAV</h2>
-    <nav class="navigation container">
-
-        <div class="nav-brand"> Brand Name</div>
-        <ul class="list-non-bullet nav-pills">
-            <li class="list-item-inline">
-                <a class="link link-active" href="/">home</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link link-active" href="/">Project</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link link-active" href="/">About</a>
-            </li>
-        </ul>
-    </nav>
-    <hr>
-
     <h2>@header</h2>
 
     <header class="hero">
@@ -123,12 +123,25 @@
     <hr>
 
     <h2>@Footer</h2>
-    <footer>
-        <div>Some small headding inside footer</div>
-        <ul>
-            <li>social one </li>
-            <li>social two </li>
-            <li>social three </li>
+    <footer class="footer">
+        <div class="footer-header">Some small headding inside footer</div>
+        <ul class="socia-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                    social one
+                </a> </li>
+
+
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                        social two
+                    </a> </li>
+
+
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                            social three
+                        </a> </li>
         </ul>
     </footer>
 
