--- a/index.html
+++ b/index.html
@@ -5,142 +5,89 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Component Library</title>
-
+    <title>Document</title>
     <link href="style.css" rel="stylesheet" />
-
 
 </head>
 
 <body>
-    <h1>Devashish's Component Library</h1>
 
-
-
-
-
-
-    <p>I am attending neog camp and i want to make a Library which would make all my project look good </p>
-    <hr>
-
-    <h2>@NAV</h2>
     <nav class="navigation container">
 
-        <div class="nav-brand"> Brand Name</div>
+        <div class="nav-brand"> I AM A DEVLOVER</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="/">home</a>
+                <a class="link link-active" href="/">HOME</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/">Project</a>
+                <a class="link link-active" href="/">PROJECT</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/">About</a>
+                <a class="link link-active" href="/">BLOG</a>
             </li>
         </ul>
     </nav>
-    <hr>
-
-
-    <h2> @Typeography</h2>
-    <h1>This is the biggest heading</h1>
-
-    <h2>This is the second biggest</h2>
-
-    <p> This is a noramal paragraph and we can write normal text here</p>
-
-    <small>This text is small as compare to the above paragraph</small>
-
-    <p>This paragraph have a <b>Bold</b> letter in it</p>
-    <hr>
-
-
-    <h2>@ Containers</h2>
-
-    <h3>Fluid Container</h3>
-    <div class="container-fluid">This is a Fluid Container and it will go till the end of the page</div>
-
-    <h3> Center Container</h3>
-    <div class="container container-center">This will go till the specified width </div>
-    <hr>
-
-
-    <h2>@Links</h2>
-    <a class="link link-primary" href="/">primary link </a>
-    <a class="link link-secondary" href="/">secondary link</a>
-    <hr>
-
-    <h2>Lists</h2>
-    <h3>UnorderList</h3>
-    <p>This list will not have bullets </p>
-    <ul class="list-non-bullet">
-        <li>Inline one</li>
-        <li>Inine two </li>
-        <li>Inline three</li>
-    </ul>
-    <h3>Unorder Inline list</h3>
-    <ul class="list-non-bullet">
-        <li class="list-item-inline">Inline item one</li>
-        <li class="list-item-inline">Inline item three</li>
-        <li class="list-item-inline">Inline item two </li>
-    </ul>
-
-    <h3> reverse ordered List</h3>
-    <ol reversed>
-        <li>milk</li>
-        <li>bread</li>
-        <li>toast</li>
-    </ol>
-    <hr>
-
-    <h2>@header</h2>
-
     <header class="hero">
         <img class="hero-img" src="images/image.svg" />
-        <h1 class="hero-heading">Heading inside <span class="heading-inverted">hero</span></h1>
-    </header>
-    <hr>
 
-    <h2>@Sections</h2>
+        <h1 class="hero-heading">DEVASHISH VYAS <span class="heading-inverted">A WEB DEVELOPER</span></h1>
+    </header>
+
+    <section class="section ow">
+        <div class="container-center">
+
+            <h1><b>Languages i  have worked on : </b> </h1>
+            <p> I am familiar with HTML5, CSS3, Javascript ,python,Git,PHP </p>
+        </div>
+    </section>
+
+
     <section class="section">
         <div class="container-center">
 
-            <h1>White Section </h1>
-            <p>This will have white section </p>
+            <h1>Projects </h1>
+            <p>I will like to showcase my project down </p>
         </div>
+        <a class="link link-secondary" href="/lib/components.html">browse Projects</a>
     </section>
+
+
+
 
 
     <section class="section ow">
         <div class="container-center">
 
-            <h1>off White Section </h1>
-            <p>This will have off white section </p>
+            <h1><b>Hobbies: </b> </h1>
+            <p> I love to tarvel and love to click photographs check the bottom link to see my clicked photographs </p>
+            <a class="link link-secondary" href="/images/image.svg">Check Out my photographs</a>
         </div>
-
     </section>
 
-    <hr>
 
-    <h2>@Footer</h2>
+
+
+
+
+
     <footer class="footer">
-        <div class="footer-header">Some small headding inside footer</div>
+        <div class="footer-header">Connect me on </div>
         <ul class="socia-links list-non-bullet">
             <li class="list-item-inline">
                 <a class="link" href="/">
-                    social one
+                    Instagram 
                 </a> </li>
 
 
             <li class="list-item-inline">
                 <a class="link" href="/">
-                        social two
+                        Facebook
                     </a> </li>
 
 
             <li class="list-item-inline">
                 <a class="link" href="/">
-                            social three
+                            Twitter
                         </a> </li>
         </ul>
     </footer>
@@ -155,7 +102,26 @@
 
 
 
-    <!-- <div style="height: 30vh;"></div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
