--- a/Photographs Taken By Devashish_vyas_.html
+++ b/Photographs Taken By Devashish_vyas_.html
@@ -6,39 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>photographs taken by devashish_vyas_</title>
+
+    <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
     <h2>Photographs Taken By Devashish_vyas_</h2>
     <section class="section">
         <div class="container-center">
-            <img src="/images/(1).JPG" width="1500" height="1080" />
+            <img class="im" src="/images/(1).JPG" />
         </div>
     </section>
 
 
     <section class="section">
         <div class="container-center">
-            <img src="/images/ (2).JPG" width="1500" height="1080" />
+            <img class="im" src="/images/ (2).JPG" />
         </div>
     </section>
 
     <section class="section">
         <div class="container-center">
-            <img src="/images/ (3).JPG" width="1500" height="1080" />
+            <img class="im" src="/images/ (3).JPG" />
         </div>
     </section>
 
 
     <section class="section">
         <div class="container-center">
-            <img src="/images/ (4).JPG" width="1500" height="1080" />
+            <img class="im" src="/images/ (4).JPG" />
         </div>
     </section>
 
     <section class="section">
         <div class="container-center">
-            <img src="/images/ (5).JPG" width="1500" height="1080" />
+            <img class="im" src="/images/ (5).JPG" />
         </div>
     </section>
 
@@ -46,16 +48,7 @@
 
     <section class="section">
         <div class="container-center">
-            <img src="/images/ (6).JPG" width="1500" height="1080" />
-        </div>
-    </section>
-
-
-
-
-    <section class="section">
-        <div class="container-center">
-            <img src="/images/ (7).JPG" width="1500" height="1080" />
+            <img class="im" src="/images/ (6).JPG" />
         </div>
     </section>
 
@@ -64,14 +57,23 @@
 
     <section class="section">
         <div class="container-center">
-            <img src="/images/ (8).JPG" width="1500" height="1080" />
+            <img class="im" src="/images/ (7).JPG" />
+        </div>
+    </section>
+
+
+
+
+    <section class="section">
+        <div class="container-center">
+            <img csrc="/images/ (8).JPG" />
         </div>
     </section>
 
 
     <section class="section">
         <div class="container-center">
-            <img src="/images/ (9).JPG" width="1500" height="1080" />
+            <img csrc="/images/ (9).JPG" />
         </div>
     </section>
 
