update:index.html

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
     <nav class="navigation container">
 
-        <div class="nav-brand"> I AM A DEVLOVER</div>
+        <div class="nav-brand"> I AM A DEVELOPER</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="/">HOME</a>
+                <a class="link link-active" href="/index.html">HOME</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/">PROJECT</a>
+                <a class="link link-active" href="/comming soon.html">PROJECT</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/">BLOG</a>
+                <a class="link link-active" href="/comming soon.html">BLOG</a>
             </li>
         </ul>
     </nav>
@@ -60,7 +60,7 @@
 
             <h1><b>Hobbies: </b> </h1>
             <p> I love to tarvel and love to click photographs check the bottom link to see my clicked photographs </p>
-            <a class="link link-secondary" href="/Photographs Taken By Devashish_vyas_.html">Check Out my photographs</a>
+            <a class="link link-secondary" href="/">Check Out my photographs</a>
         </div>
     </section>
 
