--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <h1><b>Hobbies: </b> </h1>
             <p> I love to tarvel and love to click photographs check the bottom link to see my clicked photographs </p>
-            <a class="link link-secondary" href="/">Check Out my photographs</a>
+            <a class="link link-secondary" href="/Photographs Taken By Devashish_vyas_.html">Check Out my photographs</a>
         </div>
     </section>
 
