update:css and social

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <a class="link link-active" href="/index.html">HOME</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/comming soon.html">PROJECT</a>
+                <a class="" href="/project.html">PROJECT</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/comming soon.html">BLOG</a>
+                <a class="" href="/blog.html">BLOG</a>
             </li>
         </ul>
     </nav>
@@ -74,7 +74,7 @@
         <div class="footer-header">Connect me on </div>
         <ul class="socia-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="/">
+                <a class="link" href="https://www.instagram.com/devashish._vyas/">
                     Instagram 
                 </a> </li>
 
